# research

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Integration.md  LICENSE  README.md  SECURITY.md  pyproject.toml  test_api.py
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  DASHBOARD_INTEGRATION.md  OUTPUT_SCHEMA.md  PROTOCOL_INTEGRATIONS.md  RELEASE_CHECKLIST.md  RESEARCH_BASIS.md  ROADMAP.md  VC_FRAMEWORK.md
src/investment_agent/: __init__.py  agent.py  ai_refiner.py  api.py  cli.py  dashboard.py  fundraising.py  ingestion.py  market_data.py  models.py  narrative.py  project_profile.py  research.py  risk_engine.py  scoring.py  team_engine.py
tests/: test_agent.py  test_api.py  test_project_profile.py  test_research.py
